--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
   "author": "ForkKILLET",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.12.16",
-    "eslint": "^7.20.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-rename": "^2.0.0"
+    "esbuild": "^0.14.21"
   },
   "dependencies": {}
 }
